Fri Aug 29 20:14:48 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_stubs.adb: Detect if a partition includes a RCI package or
 	may declare a RACW variable. If this is not the case, then set
	Has_RCI_Pkg_Or_RACW_Var to false.

Tue Aug 12 17:54:28 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.ads, xe_back.adb: Remove Default_Host which was not
 	initialized but still used.

	* xe_lead.adb, xe_stubs.adb: Suppress useless function calls.

	* xe_parse.adb: Add some tree debugging information.

Tue Aug 12 13:08:02 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* config.sdefault: libgnat.a is now located under adalib.

	* Makefile.am: gnatdist is now generated from gnatdist.in.

Wed Jun  4 19:34:41 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_back.adb: Fix problems in Set_Partition_Attribute due to
 	switch from Null_PID to Default_Partition as predefined partition
 	PID.

Tue May 20 17:15:04 1997  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_back.adb: Use first slot of tables to store the default type
 	attributes.

Wed May 14 14:33:02 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_stubs.adb: Generate task pool bounds
 	assignment. Part of Task_Pool attribute implementation.

Mon May  5 21:30:25 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.adb: Changed "delete" into "deleting" and format output
	correctly.

Fri May  2 13:45:06 1997  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe.ads: Add numeric literal token.

	* xe_back.adb: Use Default_Partition = Partitions.Table
 	(Partitions.First) to store Partition_Type default values. Same
 	thing for Channels. Add new procedure Initialize to initialize
 	these defaults. Handle Attribute_Task_Pool in
 	Set_Partition_Attribute.

	* xe_build.adb: Invoke XE_Back.Initialize;

	* xe_check.adb, xe_lead.adb: Change loop range for Partitions
 	(resp. Channels) to skip the first as it corresponds to the
 	default values for the type Partition_Type (resp. Channel_Type).